[package]
name = "toxencryptsave-capi"
version = "0.1.0"
authors = ["quininer kel <quininer@live.com>"]
build = "build.rs"

[profile.release]
lto = true

[lib]
name = "toxencryptsave"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
sodiumoxide = "0.0.10"

[dependencies.tox]
git = "https://github.com/zetok/tox.git"

[build-dependencies]
rusty-cheddar = "0.3"
